manifests/vault/vault-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: https-vault
  hostnames:
    - vault.demo.local
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      
      backendRefs:
        - name: vault-ui
          port: 8200
